test/compile_errors/err_match_str_exhaust.w
//! expect-check-fail: does not match

// Test: enum variant shorthand with non-existent variant is rejected.

enum Color { Red | Green | Blue }

fn main:
    let c: Color = .Yellow
